--- a/src/app/page/mypage/pages/mypage-index/mypage-index.page.html
+++ b/src/app/page/mypage/pages/mypage-index/mypage-index.page.html
@@ -15,7 +15,7 @@
                 </ng-template>
 
                 <ng-template #info>
-                    <a>
+                    <a [routerLink]="['/mypage/info']" routerLinkActive="router-link-active">
                         <span nz-icon nzType="right" nzTheme="outline"></span>
                     </a>
                 </ng-template>
