add user profile guard

--- a/src/app/shared/component/navbar/navbar.component.scss
+++ b/src/app/shared/component/navbar/navbar.component.scss
@@ -24,7 +24,8 @@ a {
 }
 
 .active {
-  color: var(--cs-color-primary) !important;
+  color: white !important;
+  text-decoration: underline;
 }
 
 .navbar__content{
