--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -28,6 +28,10 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
+                        [routerLink]="'/blog/all'">Blog</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
                         routerLink="/about">About</a>
                 </li>
             </ul>
