--- a/src/app/page/blog/pages/single-page/blog-page.component.html
+++ b/src/app/page/blog/pages/single-page/blog-page.component.html
@@ -1,13 +1,13 @@
-<div class="container-fluid px-3">
+<div class="container px-3">
     <ng-container *ngIf="blogData">
         <div class="row border-bottom p-3">
             <div class="col-lg-9">
-                <h1 class="fs-3 blog__name cs__text-3">{{blogData.name}}</h1>
+                <h1 class="fs-2 blog__name">{{blogData.name}}</h1>
                 <h3 class="fs-6 cs__text-2">by <strong>{{blogData.author}}</strong>, at {{blogData.created_at |
                     date:'short'}}
                 </h3>
                 <span>
-                    <h3 class="blog__description fs-5 cs__text-2">{{blogData.description}}</h3>
+                    <h3 class="blog__description fs-6 cs__text-2">{{blogData.description}}</h3>
                 </span>
             </div>
             <div class="col-lg-3" *ngIf="userInfo$ | async">
