--- a/src/app/page/home/pages/home.page.html
+++ b/src/app/page/home/pages/home.page.html
@@ -13,13 +13,13 @@
                     Some products come from Japan which so good but never be exposed
                     to the rest of the world.
                 </h5>
-                <div class="row">
+                <div class="row p-2">
 
                     <div class="cs__cta-1 cs__pointer" [routerLink]="['/product']" routerLinkActive="router-link-active"
                         gsapFadeIn [delay]="1" [duration]="0.5" [direct]="'s'">
                         View Products
                     </div>
-                    <div class="cs__cta-2 cs__pointer ms-3" [routerLink]="['/blog']"
+                    <div class="cs__cta-2 cs__pointer ms-3" [routerLink]="['/blog/all']"
                         routerLinkActive="router-link-active" gsapFadeIn [delay]="1" [duration]="0.5" [direct]="'s'">
                         View Blogs
                     </div>
@@ -32,6 +32,13 @@
         </div>
     </div>
 </div>
+
+<ng-container *ngIf="(blogsData$|async) as blogsData ">
+    <div class="container-fluid" *ngIf="blogsData.length > 0">
+        <nz-divider nzText="New post" nzOrientation="left"></nz-divider>
+        <app-home-blog [blogsData]="blogsData"></app-home-blog>
+    </div>
+</ng-container>
 
 <div class="container-fluid">
     <div class="row">
@@ -55,13 +62,6 @@
             <div class="suggest" style="height: 200px;"></div>
         </div>
         <div class="col-xl-2 p-3 ms-auto" *ngIf="!(isHandset$ | async)">
-            <!-- <div class="promotion__banner green-color-gradient p-3 text-center" gsapFadeIn [delay]="2.75"
-                [duration]="0.75" [direct]="'e'" style="height: 500px;">
-                <p class="fs-1 cs__text-2" gsapFadeIn [delay]="3" [duration]="0.75" [direct]="'e'">Choose wisely</p>
-                <p class="fs-1 cs__text-2" gsapFadeIn [delay]="3.5" [duration]="0.75" [direct]="'e'">Escape the matrix
-                </p>
-                <p class="fs-1 cs__text-2" gsapFadeIn [delay]="4" [duration]="0.75" [direct]="'e'">Find freedom</p>
-            </div> -->
             <div class="email__subscriber light-color-gradient p-3 mt-3">
                 <div class="row">
                     <app-email-sub></app-email-sub>
