--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -1,19 +1,24 @@
-<div class="row bg-white py-2 m-0">
-    <div class="col">
-        <h1 class="fs-3" *ngIf="header.title">{{header.title}}</h1>
-    </div>
-    <div class="col mt-2">
-        <h2 class="fs-6" *ngIf="header.subtitle">{{header.subtitle}}</h2>
-    </div>
+<div class="header__section">
+    <div class="row bg-white py-2 m-0">
+        <div class="col">
+            <!-- <span nz-icon nzType="arrow-left" nzTheme="outline"></span> -->
+            <h1 class="fs-3" *ngIf="header.title">
+                {{header.title}}
+            </h1>
+        </div>
+        <div class="col mt-2">
+            <h2 class="fs-6" *ngIf="header.subtitle">{{header.subtitle}}</h2>
+        </div>
 
-    <div class="col-xl-3 col-md-5 ms-auto col-12 d-flex justify-items-end flex-row">
-        <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
-            <input type="text" nz-input placeholder="name, author, type,..." [(ngModel)]="searchKW" />
-        </nz-input-group>
-        <ng-template #suffixIconButton>
-            <button nz-button nzType="primary" nzSearch (click)="search()">
-                <span nz-icon nzType="search"></span>
-            </button>
-        </ng-template>
+        <div class="col-xl-3 col-md-5 ms-auto col-12 d-flex justify-items-end flex-row">
+            <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
+                <input type="text" nz-input placeholder="name, author, type,..." [(ngModel)]="searchKW" />
+            </nz-input-group>
+            <ng-template #suffixIconButton>
+                <button nz-button nzType="primary" nzSearch (click)="search()">
+                    <span nz-icon nzType="search"></span>
+                </button>
+            </ng-template>
+        </div>
     </div>
 </div>
