remove product tab, change design toppage

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <nz-layout>
+  <nz-layout *ngIf="breakPoint$ | async">
     <nz-sider nzCollapsible nzWidth="200px" [(nzCollapsed)]="isCollapsed" [nzCollapsedWidth]="80"
       *ngIf="!(isHandset$ | async)">
       <div class="logo text-center cs__pointer" [routerLink]="['/']" routerLinkActive="router-link-active">
@@ -20,10 +20,10 @@
           <span nz-icon nzType="edit" nzTheme="outline"></span>
           <span>Blog</span>
         </li>
-        <li nz-menu-item [routerLink]="['/product']">
+        <!-- <li nz-menu-item [routerLink]="['/product']">
           <span nz-icon nzType="radar-chart" nzTheme="outline"></span>
           <span>Product</span>
-        </li>
+        </li> -->
         <!-- <li nz-submenu nzTitle="Search" nzIcon="search">
           <ul>
             <li nz-menu-item>All</li>
@@ -40,7 +40,9 @@
         <li *ngIf="!isLoggedIn" class="nav-item">
           <a nz-button nzType="link" (click)="isShowLoginModal = true">
             <span nz-icon nzType="login"></span>
-            Log in
+            <ng-container *ngIf="!(isHandset$ | async) && !isCollapsed">
+              Log in
+            </ng-container>
           </a>
         </li>
         <ng-container *ngIf="(userInfo$ | async) as userInfo">
