--- a/src/app/page/blog/pages/view-blog/view-blog.component.html
+++ b/src/app/page/blog/pages/view-blog/view-blog.component.html
@@ -1,16 +1,16 @@
 <div class="container py-lg-3 px-lg-5">
-    <div class="row">
+    <div class="row py-2">
         <div class="col-lg-2" *ngIf="!(isHandset$ | async) && (isLogin$ | async)">
             <button nz-button nzType="primary" [routerLink]="'/blog/new/'">Add blog</button>
         </div>
     </div>
-    <div class="row pt-3 d-flex justify-content-between" *ngIf="(apiData$ | async)">
-        <div class="col-lg-9 col-12 order-lg-1 order-2">
+    <div class="row pt-2 d-flex justify-content-between" *ngIf="(apiData$ | async)">
+        <div class="col-xl-9 col-12 order-xl-1 order-2">
             <ng-container *ngFor="let item of blogData">
                 <app-blog-card [blogData]="item" *ngIf="item.isShow"></app-blog-card>
             </ng-container>
         </div>
-        <div class="col-lg-3 col-12 order-lg-2 order-1" [ngClass]="!(isHandset$ | async) ? 'border-left' : ''">
+        <div class="col-xl-3 col-12 order-xl-2 order-1" [ngClass]="!(isHandset$ | async) ? 'border-left' : ''">
             <div class="row pb-3">
                 <div class="col-lg-12 col-12">
                     <input style="width: 75%;" type="text" [(ngModel)]="filterKW" (keydown.enter)="filter()"
@@ -19,7 +19,7 @@
                 </div>
                 <!-- refactor this block later -->
                 <div class="col-lg-12 col-12">
-                    <nz-tag [nzColor]="'green'" class="ms-1 mt-2 cs__pointer" (click)="filter('MT4')">#MT4</nz-tag>
+                    <nz-tag [nzColor]="'green'" class="mt-2 cs__pointer" (click)="filter('MT4')">#MT4</nz-tag>
                     <nz-tag [nzColor]="'green'" class="ms-1 mt-2 cs__pointer" (click)="filter('MT5')">#MT5</nz-tag>
                     <nz-tag [nzColor]="'green'" class="ms-1 mt-2 cs__pointer"
                         (click)="filter('autotrade')">#autotrade</nz-tag>
