--- a/src/app/page/home/pages/home.page.html
+++ b/src/app/page/home/pages/home.page.html
@@ -19,13 +19,13 @@
                         gsapFadeIn [delay]="1" [duration]="0.5" [direct]="'s'">
                         View Products
                     </div>
-                    <div class="cs__cta-2 cs__pointer ms-3" [routerLink]="['/blog/all']"
+                    <div class="cs__cta-2 cs__pointer ms-md-3 ms-1" [routerLink]="['/blog/all']"
                         routerLinkActive="router-link-active" gsapFadeIn [delay]="1" [duration]="0.5" [direct]="'s'">
                         View Blogs
                     </div>
                 </div>
             </div>
-            <div class="col-xl-3 ms-auto">
+            <div class="col-xl-3 ms-auto d-none d-xl-block">
                 <img src="/assets/undraw_predictive_analytics_re_wxt8.svg" alt="main finance image" height="250"
                     gsapFadeIn [delay]="0.2" [duration]="1.3" [direct]="'e'">
             </div>
@@ -33,14 +33,15 @@
     </div>
 </div>
 
+
 <ng-container *ngIf="(blogsData$|async) as blogsData ">
-    <div class="container-fluid" *ngIf="blogsData.length > 0">
+    <div class="container-fluid pt-1" *ngIf="blogsData.length > 0">
         <nz-divider nzText="New post" nzOrientation="left"></nz-divider>
         <app-home-blog [blogsData]="blogsData"></app-home-blog>
     </div>
 </ng-container>
 
-<div class="container-fluid">
+<div class="container-fluid d-none">
     <div class="row">
         <div class="col-xl-6 col-md-12 col-12 p-3">
             <nz-divider nzText="Best rating" nzOrientation="left"></nz-divider>
