--- a/src/app/page/about/about.page.html
+++ b/src/app/page/about/about.page.html
@@ -3,21 +3,16 @@
         <h2>All You Need To Know About Us</h2>
     </div>
     <div class="text-center pb-3">
-        <h4 class="lead"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                ut.</em></h4>
+        <h4 class="lead"><em>At FXEater, we are committed to empowering traders with knowledge and resources to navigate
+                the forex market successfully.</em></h4>
     </div>
     <div class="row justify-content-between p-3 pb-5">
         <div class="col-xl-6" gsapFadeIn [delay]="0.2" [duration]="0.5" [direct]="'s'">
             <h2>Who we are</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into
-                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of
-                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-                Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>At FXEater, we are a dedicated team of forex enthusiasts who are passionate about sharing knowledge and
+                empowering traders. With years of experience in the forex market, we aim to provide valuable educational
+                resources, insightful analysis, and practical strategies to help traders enhance their skills and
+                achieve their trading goals.</p>
         </div>
         <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="0.2" [duration]="0.5"
             [direct]="'e'">
@@ -28,15 +23,11 @@
     <div class="row flex-row-reverse justify-content-between p-3 pb-5">
         <div class="col-xl-6" gsapFadeIn [delay]="0.8" [duration]="0.5" [direct]="'e'">
             <h2>What we do</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into
-                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of
-                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-                Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>At FXEater, our primary focus is to equip traders with the knowledge and tools they need to navigate the
+                dynamic world of forex trading. We offer comprehensive educational content, including articles,
+                tutorials, and guides, covering a wide range of topics from basic forex concepts to advanced trading
+                strategies. We also provide market analysis, trading tips, and updates to keep traders informed about
+                market trends and opportunities.</p>
         </div>
         <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="0.8" [duration]="0.5"
             [direct]="'s'">
@@ -47,15 +38,11 @@
     <div class="row justify-content-between p-3">
         <div class="col-xl-6" gsapFadeIn [delay]="1.3" [duration]="0.5" [direct]="'s'">
             <h2>Disclaimer</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                the
-                industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-                into
-                electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-                release of
-                Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-                Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <p>The information provided on FXEater is for educational and informational purposes only. Trading forex
+                involves substantial risks, and past performance is not indicative of future results. It is essential to
+                conduct thorough research, practice risk management, and consult with a financial advisor before
+                engaging in any trading activities. FXEater does not provide financial advice, and all trading decisions
+                are solely the responsibility of the individual trader.</p>
         </div>
         <div class="col-xl-5 d-flex align-items-center justify-content-center" gsapFadeIn [delay]="1.3" [duration]="0.5"
             [direct]="'e'">
