add lang to blog, single blog, about

--- a/src/app/page/about/about.page.html
+++ b/src/app/page/about/about.page.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="(route$ | async)">
     <div class="text-center pt-3">
         <h2>All You Need To Know About Us</h2>
     </div>
