--- a/src/app/page/blog/pages/single-page/blog-page.component.html
+++ b/src/app/page/blog/pages/single-page/blog-page.component.html
@@ -1,4 +1,4 @@
-<div class="container px-3">
+<div class="container px-3" *ngIf="route$ | async">
     <ng-container *ngIf="blogData">
         <div class="row border-bottom p-3">
             <div class="col-lg-9">
