--- a/src/app/page/about/about.page.html
+++ b/src/app/page/about/about.page.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="text-center pt-3">
-        <h2>All You Need To Know About Us</h2>
+        <h2>All You Need To Know FXeater</h2>
     </div>
     <div class="text-center pb-3">
         <h4 class="lead"><em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
