--- a/src/app/page/blog/components/blog-card/blog-card.component.scss
+++ b/src/app/page/blog/components/blog-card/blog-card.component.scss
@@ -14,6 +14,7 @@
 
 
 .article-item {
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     position: relative;
     border-radius: 4px;
     border: 1px solid darkgray;
@@ -68,3 +69,4 @@
 //     color: #FFC107;
 //   }
 }
+
