add langService, add change lang components, add logic to auto-add param to request

--- a/src/app/page/blog/components/blog-card/blog-card.component.html
+++ b/src/app/page/blog/components/blog-card/blog-card.component.html
@@ -1,4 +1,4 @@
-<div class="article-item p-lg-3 p-2 mb-lg-3 mb-1 bg-white">
+<div class="article-item p-lg-3 p-2 mb-md-3 mb-2 bg-white">
     <div class="item-content">
         <a class="item-thumb" [routerLink]="'/blog/'+blogData.id+'-'+blogSlug" routerLinkActive="router-link-active">
             <div class="image" [ngStyle]="{'background-image': 'url(' + blogData.thumbnail_image_url + ')'}"></div>
