--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -10,7 +10,7 @@
             <h2 class="fs-6" *ngIf="header.subtitle">{{header.subtitle}}</h2>
         </div>
 
-        <div class="col-xl-3 col-md-5 ms-auto col-12 d-flex justify-items-end flex-row">
+        <div class="col-xl-5 col-md-7 ms-auto col-12 d-flex justify-items-end flex-row">
             <nz-input-group nzSearch [nzAddOnAfter]="suffixIconButton">
                 <input type="text" nz-input placeholder="name, author, type,..." [(ngModel)]="searchKW" />
             </nz-input-group>
@@ -19,10 +19,8 @@
                     <span nz-icon nzType="search"></span>
                 </button>
             </ng-template>
+            <app-select-lang ngClass="ms-2"></app-select-lang>
         </div>
 
-        <div class="col-xl-1 col-md-2 px-1">
-            <app-select-lang></app-select-lang>
-        </div>
     </div>
 </div>
