change style for mobile blog card

--- a/src/app/page/blog/components/blog-card/blog-card.component.scss
+++ b/src/app/page/blog/components/blog-card/blog-card.component.scss
@@ -65,8 +65,8 @@
     display: none;
   }
 
-//   .item-body .title {
-//     color: #FFC107;
-//   }
+  .item-body .title {
+    font-size: 1rem !important;
+  }
 }
 
