--- a/src/app/page/home/pages/home.page.html
+++ b/src/app/page/home/pages/home.page.html
@@ -1,38 +1,13 @@
-<div class="section light-color-gradient">
-    <div class="container" style="opacity: 1;">
-        <div class="row">
-            <div class="col-xl-6 col-12">
-                <h2 class="cs__text-3 pb-3" gsapFadeIn [delay]="0.2" [duration]="0.5" [direct]="'s'">
-                    Welcome to FXeater blog!
-                </h2>
-                <h5 class="cs__text-2 pb-3" gsapFadeIn [delay]="0.6" [duration]="0.5" [direct]="'s'">
-                    Here, we share ton of resources that we have tried and will definitely continue using. All with
-                    reviews, useage and detail manual.
-                </h5>
-                <h5 class="cs__text-2 pb-3" gsapFadeIn [delay]="1" [duration]="0.5" [direct]="'s'">
-                    Some products come from Japan which so good but never be exposed
-                    to the rest of the world.
-                </h5>
-                <div class="row p-2">
-
-                    <div class="cs__cta-1 cs__pointer" [routerLink]="['/product']" routerLinkActive="router-link-active"
-                        gsapFadeIn [delay]="1" [duration]="0.5" [direct]="'s'">
-                        View Products
-                    </div>
-                    <div class="cs__cta-2 cs__pointer ms-md-3 ms-1" [routerLink]="['/blog/all']"
-                        routerLinkActive="router-link-active" gsapFadeIn [delay]="1" [duration]="0.5" [direct]="'s'">
-                        View Blogs
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-3 ms-auto d-none d-xl-block">
-                <img src="/assets/undraw_predictive_analytics_re_wxt8.svg" alt="main finance image" height="250"
-                    gsapFadeIn [delay]="0.2" [duration]="1.3" [direct]="'e'">
-            </div>
+<div class="container-fluid p-3">
+    <div class="row">
+        <div class="col-lg-8 col-12">
+            <ng-container *ngTemplateOutlet="homeNews"></ng-container>
+        </div>
+        <div class="col-lg-4 col-12">
+            <ng-container *ngTemplateOutlet="homeNavi"></ng-container>
         </div>
     </div>
 </div>
-
 
 <ng-container *ngIf="(blogsData$|async) as blogsData ">
     <div class="container-fluid pt-1" *ngIf="blogsData.length > 0">
@@ -41,33 +16,11 @@
     </div>
 </ng-container>
 
-<div class="container-fluid d-none">
-    <div class="row">
-        <div class="col-xl-6 col-md-12 col-12 p-3">
-            <nz-divider nzText="Best rating" nzOrientation="left"></nz-divider>
 
-            <div class="best__rating__product" *ngIf="(productData$ | async) as items">
-                <nz-tabset [nzTabPosition]="!(isHandset$ | async) ? 'left' : 'top'">
-                    <nz-tab *ngFor="let tab of [0,1]" [nzTitle]="'' + (tab+1)">
-                        <app-lg-product-card [productData]="items[tab]"></app-lg-product-card>
-                    </nz-tab>
-                </nz-tabset>
-            </div>
-        </div>
-        <div class="col-xl-4 p-3">
-            <nz-divider nzText="New product" nzOrientation="left"></nz-divider>
-            <div class="new__product" style="height: 200px;"></div>
-            <nz-divider nzText="Best user" nzOrientation="left"></nz-divider>
-            <div class="best__urer" style="height: 200px;"></div>
-            <nz-divider nzText="Suggest" nzOrientation="left"></nz-divider>
-            <div class="suggest" style="height: 200px;"></div>
-        </div>
-        <div class="col-xl-2 p-3 ms-auto" *ngIf="!(isHandset$ | async)">
-            <div class="email__subscriber light-color-gradient p-3 mt-3">
-                <div class="row">
-                    <app-email-sub></app-email-sub>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<ng-template #homeNavi>
+    <app-home-easy-access></app-home-easy-access>
+</ng-template>
+
+<ng-template #homeNews>
+    <app-home-news></app-home-news>
+</ng-template>
