--- a/src/app/page/home/components/home-easy-access/home-easy-access.component.html
+++ b/src/app/page/home/components/home-easy-access/home-easy-access.component.html
@@ -1,1 +1,7 @@
-<p>home-easy-access works!</p>
+<nz-tag [nzColor]="'magenta'">
+    <a [routerLink]="['/blog/all']">Blog</a>
+</nz-tag>
+<nz-tag [nzColor]="'green'">
+    <a [routerLink]="['/news']" routerLinkActive="router-link-active">News</a>
+</nz-tag>
+<nz-tag [nzColor]="'volcano'">Learning</nz-tag>
