--- a/src/app/page/mypage/pages/my-blog/my-blog.page.html
+++ b/src/app/page/mypage/pages/my-blog/my-blog.page.html
@@ -7,8 +7,8 @@
         </div>
     </div>
     <div class="row mt-3" *ngIf="(apiData$ | async)">
-        <div class="col-lg-4 col-6" *ngFor="let item of blogData">
-            <div class="blog__card border px-3 pt-3 pb-2 mb-3 bg-light">
+        <div class="col-lg-4 col-12" *ngFor="let item of blogData">
+            <div class="blog__card border px-3 pt-3 pb-2 mb-3 bg-white">
                 <div class="blog__card__header">
                     <span class="fs-5">
                         <a class="text-reset" routerLink="{{generateUrl(item)}}">{{item.name}}</a>
@@ -24,7 +24,7 @@
                             {{item.description}}
                         </div>
                         <div class="col-3">
-                            <!-- <p-image src="{{item.thumbnail_image_url}}" alt="Image" width="100%"></p-image> -->
+                            <img nz-image width="100%" nzSrc="{{item.thumbnail_image_url}}" alt="" />
                         </div>
                     </div>
                 </div>
