--- a/src/app/page/home/pages/home.page.html
+++ b/src/app/page/home/pages/home.page.html
@@ -3,7 +3,7 @@
         <div class="col-lg-8 col-12">
             <ng-container *ngTemplateOutlet="homeNews"></ng-container>
         </div>
-        <div class="col-lg-4 col-12">
+        <div class="col-lg-4 col-12 d-flex justify-content-end">
             <ng-container *ngTemplateOutlet="homeNavi"></ng-container>
         </div>
     </div>
