--- a/src/app/page/blog/pages/single-page/blog-page.component.html
+++ b/src/app/page/blog/pages/single-page/blog-page.component.html
@@ -3,12 +3,10 @@
         <div class="row border-bottom p-3">
             <div class="col-lg-9">
                 <h1 class="fs-2 blog__name">{{blogData.name}}</h1>
-                <h3 class="fs-6 cs__text-2">by <strong>{{blogData.author}}</strong>, at {{blogData.created_at |
+                <span class="fs-6 cs__text-2">by <strong>{{blogData.author}}</strong>, at {{blogData.created_at |
                     date:'short'}}
-                </h3>
-                <span>
-                    <h3 class="blog__description fs-6 cs__text-2">{{blogData.description}}</h3>
                 </span>
+                <h3 class="blog__description mt-2 fs-6 cs__text-2">{{blogData.description}}</h3>
             </div>
             <div class="col-lg-3" *ngIf="userInfo$ | async">
                 <ng-container *ngIf="userData && userData.base_user?.id == blogData.author_info.author_id">
