add series to homepage

--- a/src/app/page/home/components/home-blog/home-blog.component.html
+++ b/src/app/page/home/components/home-blog/home-blog.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <ng-container *ngFor="let item of blogsData">
-        <div class="col-xl-6 col-12 my-info-card p-3">
+        <div class="col-12 my-info-card p-3">
             <nz-card style="width:100%;" [nzTitle]="info_title" [nzExtra]="info">
                 <div class="article-item">
                     <div class="item-content">
