--- a/src/app/page/home/components/home-easy-access/home-easy-access.component.html
+++ b/src/app/page/home/components/home-easy-access/home-easy-access.component.html
@@ -2,6 +2,6 @@
     <a [routerLink]="['/blog/all']">Blog</a>
 </nz-tag>
 <nz-tag [nzColor]="'green'">
-    <a [routerLink]="['/news']" routerLinkActive="router-link-active">News</a>
+    <a [routerLink]="['/blog/series']" routerLinkActive="router-link-active">Series</a>
 </nz-tag>
 <nz-tag [nzColor]="'volcano'">Learning</nz-tag>
