--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -20,7 +20,7 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
-                        [routerLink]="'/home'">Home</a>
+                        [routerLink]="'/'">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link mx-1 px-lg-2 text-uppercase header__item" [routerLinkActive]="['active']"
