--- a/src/app/page/home/components/home-news/home-news.component.scss
+++ b/src/app/page/home/components/home-news/home-news.component.scss
@@ -1,1 +1,29 @@
+.live__currency::before{
+    content: "Real-time Data (UTC-4h)";
+    background-color: white;
+    border: 1px solid #eee;
+    // opacity: 20%;
+    height: 50px;
+    width: 100%;
+    display: block;
+    position: relative;
+    top: 50px;
+    z-index: 9999;
+    font-size: 1.5rem;
+    padding: 4px 8px;
+}
 
+
+
+.live__currency {
+    height: 250px;
+}
+
+@media (max-width: 600px) {
+    /* mobiles */
+    .live__currency {
+        height: 320px;
+    }
+    
+}
+  
