--- a/src/app/page/home/pages/home.page.css
+++ b/src/app/page/home/pages/home.page.css
@@ -40,3 +40,12 @@
     background-color: #f5f6f7;
     background-image: linear-gradient(54deg, rgba(122, 191, 255, 0.25), rgba(122, 228, 255, 0) 28%), linear-gradient(241deg, rgba(152, 172, 239, 0.25), rgba(152, 153, 239, 0) 36%);
 }
+
+
+span[nz-typography] {
+    display: block;
+}
+
+span[nz-typography] + span[nz-typography] {
+    margin-top: 8px;
+}
