--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -7,7 +7,7 @@
           FXeater
         </span>
       </div>
-      <ul nz-menu nzTheme="dark" nzMode="inline">
+      <ul nz-menu nzTheme="dark" nzMode="inline" class="sticky-lg-top">
         <li nz-menu-item [routerLink]="['/']">
           <span nz-icon nzType="home" nzTheme="outline"></span>
           <span>Home</span>
