--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg sticky-top navbar-dark border-bottom  navbar__content">
     <div class="container-fluid">
-        <a class="navbar-brand" routerLink="/home"><img src="{{logoUrl}}" alt="logo" width="40" height="40"
+        <a class="navbar-brand" routerLink="/"><img src="{{logoUrl}}" alt="logo" width="40" height="40"
                 srcset=""></a>
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
