add learn-chart page

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -27,10 +27,10 @@
             <li nz-menu-item [routerLink]="['/blog/series']" [nzDisabled]="false">Series</li>
           </ul>
         </li>
-        <li nz-submenu nzTitle="Learing" nzIcon="fund" nzOpen="true" [nzDisabled]="true">
+        <li nz-submenu nzTitle="Learing" nzIcon="fund" nzOpen="true" [nzDisabled]="false">
           <ul>
-            <li nz-menu-item [routerLink]="['/ask-expert']" [nzDisabled]="true">Ask Expert</li>
-            <li nz-menu-item [routerLink]="['/learn-chart']" [nzDisabled]="true">Read Chart</li>
+            <li nz-menu-item [routerLink]="['/learn/ask-expert']" [nzDisabled]="true">Ask Expert</li>
+            <li nz-menu-item [routerLink]="['/learn/learn-chart']" [nzDisabled]="false">Read Chart</li>
           </ul>
         </li>
 
