--- a/src/app/page/home/components/home-easy-access/home-easy-access.component.html
+++ b/src/app/page/home/components/home-easy-access/home-easy-access.component.html
@@ -4,4 +4,6 @@
 <nz-tag [nzColor]="'green'">
     <a [routerLink]="['/blog/series']" routerLinkActive="router-link-active">Series</a>
 </nz-tag>
-<nz-tag [nzColor]="'volcano'">Learning</nz-tag>
+<nz-tag [nzColor]="'volcano'">
+    <a [routerLink]="['/learn/learn-chart']" routerLinkActive="router-link-active">Learning</a>
+</nz-tag>
