--- a/src/app/page/blog/pages/view-blog/view-blog.component.html
+++ b/src/app/page/blog/pages/view-blog/view-blog.component.html
@@ -1,6 +1,6 @@
 <div class="container py-lg-3 px-lg-5" *ngIf="(allData$ | async)">
-    <div class="row py-2">
-        <div class="col-lg-2" *ngIf="!(isHandset$ | async) && (isLogin$ | async)">
+    <div class="row py-2" *ngIf="!(isHandset$ | async) && (isLogin$ | async)">
+        <div class="col-lg-2">
             <button nz-button nzType="primary" [routerLink]="'/blog/new/'">Add blog</button>
         </div>
     </div>
@@ -16,11 +16,15 @@
             </ng-container>
         </div>
         <div class="col-xl-3 col-12 order-xl-2 order-1" [ngClass]="!(isHandset$ | async) ? 'border-left' : ''">
-            <div class="row pb-3">
+            <div class="row pb-3 pe-2 sticky-lg-top">
                 <div class="col-lg-12 col-12">
-                    <input style="width: 75%;" type="text" [(ngModel)]="filterKW" (keydown.enter)="filter()"
-                        placeholder="wanna read?" nz-input class="mt-1" />
-                    <button nz-button nzType="primary" class="ms-1 mt-1" (click)="filter()">Filter</button>
+                    <div class="row">
+                        <div class="col-9">
+                            <input style="width: 100%;" [(ngModel)]="filterKW" (keydown.enter)="filter()"
+                                placeholder="wanna read?" nz-input class="mt-1" />
+                        </div>
+                        <button nz-button nzType="primary" class="col-3 mt-1" (click)="filter()">Filter</button>
+                    </div>
                 </div>
                 <!-- refactor this block later -->
                 <div class="col-lg-12 col-12">
