--- a/src/app/page/learning/pages/read-chart/read-chart.page.html
+++ b/src/app/page/learning/pages/read-chart/read-chart.page.html
@@ -8,7 +8,7 @@
                 <ng-template #coverTemplate>
                     <picture class="px-3 py-1">
                         <source media="(max-width:3650px)" srcset="{{item.chart_imgs[0].imgUrl}}">
-                        <img src="" width="100%" height="auto" alt="">
+                        <img src="" width="100%" height="200px" alt="{{item.name}}" style="object-fit: contain;">
                     </picture>
                 </ng-template>
                 <ng-template #viewDetail>
@@ -24,19 +24,25 @@
 </ng-container>
 
 <nz-drawer [nzClosable]="false" [nzVisible]="isShowChartInfoModal" [nzWidth]="modelSize" [nzHeight]="modelSize"
-    [nzPlacement]="modalPlacement" nzTitle="Detail: {{selectedChart.name}} parttern"
-    (nzOnClose)="isShowChartInfoModal = false">
+    [nzPlacement]="modalPlacement" nzTitle="{{selectedChart.name}} parttern" (nzOnClose)="isShowChartInfoModal = false">
     <ng-container *nzDrawerContent>
         <p nz-typography>{{selectedChart.description}}</p>
-        <nz-divider></nz-divider>
+        <span nz-typography nzType="secondary">
+            <span nz-icon nzType="exclamation-circle" nzTheme="outline"></span>
+            Click on image to zoom out.
+        </span>
         <!-- chart image -->
         <div class="chart__img" *ngFor="let item of selectedChart.chart_imgs">
-            <h3 nz-typography>{{item.name}}</h3>
+            <nz-divider nzText="{{item.name}}" nzOrientation="left"></nz-divider>
+            <!-- <h3 nz-typography>{{item.name}}</h3> -->
 
-            <img nz-image class="px-5" nzSrc="{{item.imgUrl}}" alt="{{item.name}}" [responsive]="true">
+            <picture class="px-3 py-1">
+                <img nz-image nzSrc="{{item.imgUrl}}" width="100%" alt="{{item.name}}"
+                    style="object-fit: contain;max-height: 250px;">
+            </picture>
 
             <p nz-typography class="mt-3">{{item.description}}</p>
-            <nz-divider></nz-divider>
+
         </div>
     </ng-container>
 </nz-drawer>
