modify crypto home

--- a/src/app/page/home/pages/home.page.html
+++ b/src/app/page/home/pages/home.page.html
@@ -5,10 +5,10 @@
         </div>
     </div>
     <div class="row mt-3">
-        <div class="col-lg-6 col-12">
+        <div class="col-lg-6 col-md-7 col-12">
             <ng-container *ngTemplateOutlet="homeCurPair"></ng-container>
         </div>
-        <div class="col-lg-4 d-lg-block d-none">
+        <div class="col-lg-4 col-md-5 d-md-block d-none">
             <ng-container *ngTemplateOutlet="homeCrypto"></ng-container>
         </div>
     </div>
