--- a/src/app/page/learning/pages/read-chart/read-chart.page.html
+++ b/src/app/page/learning/pages/read-chart/read-chart.page.html
@@ -6,7 +6,7 @@
                     <nz-card-meta nzTitle="{{item.name}}" nzDescription="{{item.category}}"></nz-card-meta>
                 </nz-card>
                 <ng-template #coverTemplate>
-                    <picture class="px-3 py-1">
+                    <picture class="px-3 py-1" (click)="viewChartInfo(item.id)">
                         <source media="(max-width:3650px)" srcset="{{item.chart_imgs[0].imgUrl}}">
                         <img src="" width="100%" height="200px" alt="{{item.name}}" style="object-fit: contain;">
                     </picture>
